--- a/style.css
+++ b/style.css
@@ -41,7 +41,14 @@
 
 
 
-
+.blackScreen{
+    position: fixed;
+    content: "";
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    z-index: 40;
+}
 
 
 #header{
