--- a/style.css
+++ b/style.css
@@ -67,6 +67,17 @@
     transition: .3s, opacity .3s linear;
 
 }
+.formBackground{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(90, 90, 90, 0.5);
+    z-index: 2;
+}
 .popup_form{
     background-color: white;
     border: 3px solid black;
@@ -75,6 +86,6 @@
     left: 200px;
     width: 70%;
     height: 570px;
-    z-index: 2;
+    z-index: 3;
 
 }
