--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@ body{
     background-image: url("assets/headerHDpng.png") ;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: 100% 45%;
+    background-position: top center;
+    background-size: 60% 45%;
+    background-color: black;
 
 }
 .jumbotron div{
@@ -125,8 +127,8 @@ form {
     background-color : #C5CFAE;
     color : #007665;
     border : 2px solid #649B92;
-    padding : 5px;
-    margin-top: 40px;
+    height: 100%;
+    width: 100%;
 }
 
 
