--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ body{
     -ms-user-select:none;
     user-select:none;
     cursor:default;
+    font-size: var(--font-large);
 }
 
 #load div {
@@ -125,7 +126,7 @@ body{
     width:20px;
     height:36px;
     opacity:0;
-    font-family:Helvetica, Arial, sans-serif;
+    font-family:var(--font-movie-title);
     animation:move 2s linear infinite;
     -o-animation:move 2s linear infinite;
     -moz-animation:move 2s linear infinite;
@@ -134,7 +135,7 @@ body{
     -o-transform:rotate(180deg);
     -moz-transform:rotate(180deg);
     -webkit-transform:rotate(180deg);
-    color:#35C4F0;
+    color: #ce5858;
     z-index: 500;
 }
 
